<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_books_stack_of_three"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="250dp"
            android:textSize="15dp"
            android:layout_height="45dp"
            android:background="@drawable/edittext_back"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="250dp"
            android:textSize="15dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_back"
            android:hint="@string/pass"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:background="@drawable/button_accent_back"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/buttonSignup"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="#00000000"
            android:minHeight="10dp"
            android:gravity="center"
            android:text="@string/signUp"
            android:textColor="#ffffff" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>