<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_accent"
            android:adjustViewBounds="true"
            android:layout_marginBottom="25dp"
            />

    <EditText


        android:hint="Name"


        android:layout_width="250dp"
        android:textSize="15dp"
        android:layout_height="45dp"
        android:background="@drawable/edittext_back"
        android:id="@+id/name"
        android:inputType="text"
        android:padding="12dp"
        />


    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:textSize="15dp"
        android:layout_height="45dp"
        android:background="@drawable/edittext_back"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/pass"
        android:layout_width="250dp"
        android:textSize="15dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_back"
        android:hint="@string/pass"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="@drawable/button_accent_back"
        android:text="@string/Signup"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:textColor="#fff" />

    </LinearLayout>


</RelativeLayout>